# mini-demo

./: .gitignore  README.md
acm/hrbust/: 1565.cc  2085.cc
acm/sort/: bubble_sort.cc  makefile  quick_sort.cc  select_sort.cc
aup/process/: CMakeLists.txt  demo_fork_daemon.c  demo_fork_exit.c  demo_fork_simple.c  demo_fork_wait.c  demo_popen.c  demo_sigaction.c  demo_signal.c
aup/process/pipe/: CMakeLists.txt  anonymous_pipe.c  fifo_reader.c  fifo_writer.c  mk_fifo.c
aup/process/sem/: CMakeLists.txt  sem_op.c
aup/process/shm/: CMakeLists.txt  shm_reader.c  shm_writer.c
aup/process/socket/: CMakeLists.txt  client.c  server.c  socket_pair.c
aup/thread/: CMakeLists.txt  thread_cond_mutex.c
boost_material/asio/daytime/: CMakeLists.txt
boost_meterial/asio/timer/: CMakeLists.txt
cpp/11/auto_decltype/: CMakeLists.txt  demo_simple.cpp
cpp/11/lambda/: demo_simple.cpp
cpp/11/promise_future/: CMakeLists.txt  demo_packaged_task_01.cpp  demo_promise_exception_01.cpp  demo_promise_move_01.cpp  demo_promise_simple_01.cpp
cpp/11/thread/: CMakeLists.txt  demo_constructor.cpp  demo_lock_guard.cpp  demo_mutex.cpp  demo_simple.cpp  demo_time_mutex.cpp  demo_unique_lock.cpp
cpp/arrow_overload/: CMakeLists.txt  demo_01.cpp
cpp/enum_sizeof/: demo_01.cpp
cpp/name_hidden/: CMakeLists.txt  demo_01.cpp  demo_02.cpp
cpp/rtti/: readme
data_structure_algorithm/sort/: CMakeLists.txt  demo_bubble_sort_01.cpp
data_structure_algorithm/tree/binary_tree/: CMakeLists.txt  demo_binary_tree_travel_01.cpp  demo_symmertric_tree_01.cpp
leetcode/problems/102-binary-tree-level-order-traversal/: demo_01.cpp
leetcode/problems/105-construct-binary-tree-from-preorder-and-inorder-traversal/: demo_01.cpp
leetcode/problems/11-container-with-most-water/: demo_01.cpp
leetcode/problems/136-single-number/: demo_01.cpp
leetcode/problems/1371-find-the-longest-substring-containing-vowels-in-even-counts/: demo_01.cpp
pimpl_demo/: view.cpp  view.h
test_demo/demo_01/: CMakeLists.txt  demo_01.cpp  demo_02.cpp  demo_03.cpp
thread_pool/c++11/: Makefile  main.cpp  thread_pool.cpp  thread_pool.h
thread_pool/c++98/: Makefile  README.md  main.cpp  thread_job.h  thread_job_4test.cpp  thread_job_4test.h  thread_pool.cpp  thread_pool.h
(+69 files in other folders)
