add_executable(demo_fork_simple demo_fork_simple.c)

add_executable(demo_fork_wait demo_fork_wait.c)

add_executable(demo_fork_exit demo_fork_exit.c)

add_executable(demo_fork_daemon demo_fork_daemon.c)

add_executable(demo_popen demo_popen.c)

add_executable(demo_signal demo_signal.c)

add_executable(demo_sigaction demo_sigaction.c)
